<resources>
    <string name="app_name">AILearning</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    //registro
    <string name="error_password_no_number">La contraseña debe contener al menos una numero</string>
    <string name="error_password_too_short">La contraseña debe tener al menos 8 caracteres</string>
    <string name="error_password_no_uppercase">La contraseña debe contener al menos una letra mayúscula</string>
    <string name="error_password_no_lowercase">La contraseña debe contener al menos una letra minúscula</string>
    <string name="error_nombres">El campo de nombres no puede estar vacío</string>
    <string name="error_apellidos">El campo de apellidos no puede estar vacío</string>
    <string name="error_invalid_characters">Solo se permiten letras y espacios</string>
    <string name="error_min_length">Debe tener al menos 3 caracteres</string>
    <string name="error_edad">Edad no válida.</string>
    <string name="error_email">Correo electrónico no válido</string>
    <string name="error_password_mismatch">Las contraseñas no coinciden</string>

    //login
    <!-- Mensajes de error -->
    <string name="error_email_inicio">Por favor, ingresa un correo electrónico válido.</string>
    <string name="error_password">Por favor, ingresa una contraseña.</string>
    <string name="remember_me">Recordar contraseña.</string>
    <string name="error_no_user">No se encuentra ningún usuario con este correo electrónico.</string>
    <string name="error_wrong_password">La contraseña es incorrecta.</string>

    <!-- res/values/strings.xml -->

    <!-- Otros mensajes -->
    <string name="error_login">Correo electrónico o contraseña no válidos</string>
    <string name="success_login">Inicio de sesión exitosa</string>
    <string name="error_login_failure">Error al iniciar sesión: %1$s</string>
    <string name="error_section">La sección es obligatoria</string>
    <string name="error_grade">El grado debe ser un número válido</string>
    <string name="error_temaespecifico_longitud">El tema específico debe tener menos de 50 caracteres.</string>
    <string name="error_temaespecifico_formato">El tema específico solo puede contener letras y números.</string>


    <string name="lorem_ipsum">
        cola
    </string>
    <string name="title_activity_inicio">InicioActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="recopilacion_datos_personales">Al utilizar AI Learning, recopilamos información que puedes proporcionar, como tu nombre, dirección de correo electrónico y preferencias de aprendizaje. También recopilamos datos sobre tu uso de la aplicación, incluyendo el tiempo de uso y las lecciones completadas.</string>

    <string name="datos_de_audio">AI Learning registra grabaciones de tu pronunciación para ofrecerte retroalimentación personalizada y mejorar tu aprendizaje. Estas grabaciones se utilizan únicamente con este propósito.</string>

    <string name="uso_de_datos">La información recopilada se utiliza para personalizar tu experiencia de aprendizaje, mejorar nuestros servicios y comunicarnos contigo sobre actualizaciones o novedades de la aplicación.</string>

    <string name="medidas_de_seguridad">Implementamos medidas técnicas y organizativas adecuadas para proteger tus datos personales contra el acceso no autorizado, la alteración, divulgación o destrucción.</string>

    <string name="comparticion_de_datos">No compartiremos tus datos personales con terceros sin tu consentimiento, salvo en situaciones donde la ley lo requiera o sea necesario para el funcionamiento de la aplicación.</string>

    <!-- Seleccion de Tema-->
    <string-array name="simple_items">
        <item>Animales</item>
        <item>Historia</item>
        <item>Fútbol</item>
        <item>Ciencia</item>
        <item>Geografía</item>
        <item>Comida y cocina</item>
        <item>Cultura pop</item>
        <item>Viajes y turismo</item>
        <item>Deportes</item>
        <item>Música</item>
        <item>Cine y televisión</item>
        <item>Medio ambiente</item>
        <item>Salud y bienestar</item>
        <item>Tecnología</item>
        <item>Literatura</item>
    </string-array>

    <!-- Tipos-->
    <string name="tipo_1">Pronunciación Perfecta</string>
    <string name="tipo_2">Desafío de Comprensión</string>
    <string name="tipo_3">Escucha Activa</string>
    <string name="tipo_4">Frases en Acción</string>
    <string name="tipo_5">Desafío de Cartas</string>
    <string name="tipo_6">Adivina la Palabra</string>

    <string name="desc_tipo_1">Lee y repite la frase. Mejora tu pronunciación y habla como un profesional.</string>
    <string name="desc_tipo_2">Pon a prueba tu comprensión. Lee un texto breve y responde las preguntas.</string>
    <string name="desc_tipo_3">Escucha atentamente. Selecciona la respuesta correcta y demuestra tu habilidad de escucha.</string>
    <string name="desc_tipo_4">Completa las frases. Elige la palabra perfecta y deja fluir tu creatividad.</string>
    <string name="desc_tipo_5">Desafía a las cartas. Responde, y si fallas, ¡inténtalo de nuevo para ganar!</string>
    <string name="desc_tipo_6">Adivina la palabra oculta. Tienes 10 intentos, ¡usa tu intuición y rapidez!</string>



    <string name="searchbar_hint">Buscar docentes</string>


    <string-array name="grades">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="sections">
        <item>A</item>
        <item>B</item>
        <item>Sección Única</item>
    </string-array>


</resources>
